--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,12 @@
 
 /*html styling*/
 
-#selection, #character, #enemy, #defender{
-    clear: both;
-    overflow: auto;
+body{
+    margin: 0 auto;
+    width: 90%;
+    height: 900px;
+}
+.btnClick{
+    background-color: lime;
+    color: black;
 }
